epic-4 создание консьюмера для чтения из очереди

--- a/code-with-quarkus/src/main/resources/application.properties
+++ b/code-with-quarkus/src/main/resources/application.properties
@@ -1,25 +1,105 @@
 
+quarkus.application.name=bunny-notifier
+quarkus.application.version=1.0.0
+quarkus.package.type=jar
+
+quarkus.http.port=8080
+quarkus.http.host=0.0.0.0
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+
+quarkus.log.level=INFO
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] %s%e%n
+quarkus.log.category."org.bunny".level=DEBUG
+
+mp.messaging.connector.smallrye-rabbitmq.host=localhost
+mp.messaging.connector.smallrye-rabbitmq.port=5672
+mp.messaging.connector.smallrye-rabbitmq.username=bunny
+mp.messaging.connector.smallrye-rabbitmq.password=carrot123
+mp.messaging.connector.smallrye-rabbitmq.virtual-host=/
+mp.messaging.connector.smallrye-rabbitmq.connection-timeout=10000
+mp.messaging.connector.smallrye-rabbitmq.reconnect-attempts=10
+mp.messaging.connector.smallrye-rabbitmq.reconnect-interval=5000
+mp.messaging.connector.smallrye-rabbitmq.ssl=false
+
+mp.messaging.outgoing.notifications-out.connector=smallrye-rabbitmq
 mp.messaging.outgoing.notifications-out.exchange.name=notifications.exchange
 mp.messaging.outgoing.notifications-out.exchange.type=topic
 mp.messaging.outgoing.notifications-out.exchange.durable=true
 mp.messaging.outgoing.notifications-out.exchange.auto-delete=false
-mp.messaging.outgoing.notifications-out.exchange.internal=false
-
 mp.messaging.outgoing.notifications-out.exchange.declare=true
-mp.messaging.outgoing.notifications-out.exchange.arguments={\"x-delayed-type\":\"direct\"}
+mp.messaging.outgoing.notifications-out.routing-key-expression=payload.routingKey ?: 'notification.default'
+mp.messaging.outgoing.notifications-out.message-ttl-expression=payload.ttl ?: 3600000
+mp.messaging.outgoing.notifications-out.delivery-mode=2
+mp.messaging.outgoing.notifications-out.content-type=application/json
 
-quarkus.rabbitmq.exchanges=notifications.exchange
-quarkus.rabbitmq.exchanges.notifications.exchange.type=topic
-quarkus.rabbitmq.exchanges.notifications.exchange.durable=true
+mp.messaging.incoming.email-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.email-in.exchange.name=notifications.exchange
+mp.messaging.incoming.email-in.exchange.type=topic
+mp.messaging.incoming.email-in.queue.name=email.queue
+mp.messaging.incoming.email-in.queue.durable=true
+mp.messaging.incoming.email-in.queue.auto-delete=false
+mp.messaging.incoming.email-in.routing-keys=notification.email,notification.all
+mp.messaging.incoming.email-in.auto-acknowledgement=false
+mp.messaging.incoming.email-in.failure-strategy=dead-letter-queue
 
-message.ttl.email=86400000     # 24 ???? ??? email
-message.ttl.telegram=3600000   # 1 ??? ??? telegram
-message.ttl.sms=300000         # 5 ????? ??? SMS
-message.ttl.default=3600000    # 1 ??? ?? ?????????
+mp.messaging.incoming.telegram-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.telegram-in.exchange.name=notifications.exchange
+mp.messaging.incoming.telegram-in.queue.name=telegram.queue
+mp.messaging.incoming.telegram-in.queue.durable=true
+mp.messaging.incoming.telegram-in.routing-keys=notification.telegram,notification.all
+mp.messaging.incoming.telegram-in.auto-acknowledgement=true
+mp.messaging.incoming.telegram-in.retry=true
+mp.messaging.incoming.telegram-in.retry-attempts=3
+mp.messaging.incoming.telegram-in.retry-interval=2000
 
-mp.messaging.outgoing.notifications-out.ttl=${message.ttl.default}
+mp.messaging.incoming.sms-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.sms-in.exchange.name=notifications.exchange
+mp.messaging.incoming.sms-in.queue.name=sms.queue
+mp.messaging.incoming.sms-in.queue.durable=true
+mp.messaging.incoming.sms-in.routing-keys=notification.sms,notification.all
+mp.messaging.incoming.sms-in.auto-acknowledgement=false
+mp.messaging.incoming.sms-in.max-delivery-attempts=5
+mp.messaging.incoming.sms-in.dead-letter-exchange=dlx.exchange
+mp.messaging.incoming.sms-in.dead-letter-queue-name=sms.dlq
+mp.messaging.incoming.sms-in.dead-letter-routing-key=sms.dead
 
-queue.ttl.email=86400000
-queue.ttl.telegram=3600000
-queue.ttl.sms=300000
-queue.ttl.dlq=604800000  # 7 ???? ??? DLQ
+mp.messaging.incoming.sms-dlq.connector=smallrye-rabbitmq
+mp.messaging.incoming.sms-dlq.queue.name=sms.dlq
+mp.messaging.incoming.sms-dlq.queue.durable=true
+mp.messaging.incoming.sms-dlq.auto-acknowledgement=true
+
+message.ttl.email=86400000
+message.ttl.telegram=3600000
+message.ttl.sms=300000
+message.ttl.default=3600000
+
+quarkus.health.extensions.enabled=true
+quarkus.smallrye-health.root-path=/health
+quarkus.micrometer.enabled=true
+quarkus.micrometer.export.prometheus.enabled=true
+quarkus.micrometer.export.prometheus.path=/metrics
+quarkus.micrometer.binder.rabbitmq.enabled=true
+
+quarkus.smallrye-openapi.path=/openapi
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/swagger-ui
+
+%dev.quarkus.log.level=DEBUG
+%dev.quarkus.log.category."org.bunny".level=TRACE
+%dev.quarkus.devservices.enabled=true
+%dev.quarkus.live-reload.instrumentation=true
+
+%test.mp.messaging.connector.smallrye-rabbitmq.host=localhost
+%test.mp.messaging.connector.smallrye-rabbitmq.port=5672
+%test.mp.messaging.connector.smallrye-rabbitmq.username=guest
+%test.mp.messaging.connector.smallrye-rabbitmq.password=guest
+
+%prod.quarkus.log.level=WARN
+%prod.quarkus.http.port=${PORT:8080}
+%prod.mp.messaging.connector.smallrye-rabbitmq.host=${RABBITMQ_HOST:localhost}
+%prod.mp.messaging.connector.smallrye-rabbitmq.port=${RABBITMQ_PORT:5672}
+%prod.mp.messaging.connector.smallrye-rabbitmq.username=${RABBITMQ_USERNAME:bunny}
+%prod.mp.messaging.connector.smallrye-rabbitmq.password=${RABBITMQ_PASSWORD:carrot123}
